# auto-sora-vids

./: .gitignore  README.md  pyproject.toml  tmp_cli_config.json
backend/: __init__.py  app.py  cdk.json  pipeline_stack.py  requirements.txt
backend/lambda_src/common_layer/: requirements.txt
backend/lambda_src/gdrive_forwarder/: __init__.py  app.py  drive.py  handler.py  requirements.txt  settings.py  storage.py
backend/lambda_src/job_ingest/: __init__.py  app.py  handler.py  http.py  models.py  repository.py
backend/lambda_src/job_scheduler/: __init__.py  app.py  dispatcher.py  executor.py  handler.py  models.py  queue_worker.py  settings.py
backend/lambda_src/job_worker/: Dockerfile  __init__.py  bundle_store.py  config.py  handler.py  models.py  pipeline_runner.py  repository.py  storage.py  workflow.py
backend/lambda_src/media_layer/: requirements.txt
backend/tests/: __init__.py  conftest.py  test_gdrive_forwarder.py  test_job_ingest.py  test_scheduler.py  test_worker_processor.py
docs/: TODO.md  architecture.md  configuration.md
docs/apps_script/: .clasp.json  Code.gs  README.md
docs/postman/: video-automation.postman_collection.json
scripts/: deploy_apps_script.sh  remote_job.py  sync_env_to_ssm.py
src/aivideomaker/: cli.py  orchestrator.py  ssm.py
src/aivideomaker/article_ingest/: model.py  service.py
src/aivideomaker/captions/: __init__.py  ass_builder.py
src/aivideomaker/chunker/: model.py  planner.py
src/aivideomaker/media_pipeline/: __init__.py  elevenlabs_client.py  elevenlabs_music_client.py  sora_client.py  veo_client.py  (+1 more)
(+12 files in other folders)
