[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aivideomaker"
version = "0.1.0"
description = "Pipeline for converting news articles into suspense-driven video scripts and prompts."
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "trafilatura>=1.6",
  "pdfminer.six>=20221105",
  "pydantic>=2.5",
  "python-dotenv>=1.0",
  "moviepy>=1.0,<2.0",
  "ffmpeg-python>=0.2",
  "soundfile>=0.12",
  "anthropic>=0.20",
  "google-cloud-storage>=3.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.1.14"
]

[project.scripts]
aivideo = "aivideomaker.cli:main"
